--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "config": "^3.0.1",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "joi": "^14.3.1",
