--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
