--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.2",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.5.7",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
