--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-jwt-decode": "^0.1.0",
+    "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.7",
     "vuex": "^3.1.0"
