--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.14.0",
     "config": "^3.0.1",
     "debug": "^4.1.1",
     "express": "^4.16.4",
@@ -22,6 +23,8 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "slugify": "^1.3.4"
