--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "slugify": "^1.3.4"
+    "slugify": "^1.3.4",
+    "stripe": "^6.31.2"
   }
 }
